@@ -1,10 +1,15 @@
-$Id: CHANGES,v 1.101 2001/02/16 10:40:47 stelian Exp $
+$Id: CHANGES,v 1.102 2001/02/16 13:38:46 stelian Exp $
 
 Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
 ======================================================================
 
-1.	Let dump report the number of blocks dumped per volume.
+1.	Made dump report the number of blocks dumped per volume.
 	Thanks to Kenneth Porter <shiva@well.com> for the suggestion.
+
+2.	Fix a bug in dump where waiting too much at the 'change volumes'
+	question caused the volume to be rewritten. Thanks to
+	Graham Reed <greed@users.sourceforge.net> for reporting the
+	bug and providing a patch.
 
 Changes between versions 0.4b20 and 0.4b21 (released January 13, 2001)
 ======================================================================
